# QGraphics

./: .gitignore  CFG.txt  README.md  basics.txt  example.qgc  pyproject.toml  qgraphic.bat  qgraphic.py  script1.qgk  test.qgk
Dev Diary/: 0.0.1.txt  0.1.0.txt  0.2.0.txt  0.2.1.txt  0.2.2.txt  1.0.0  1.0.1  1.1.0  1.1.1  2.0.0  2.1.0  2.1.1  3.0.0  3.X.X Plans
Engine/: engine.py
GUI/: __init__.py  codeeditor.py  framedisplayer.py  mainwindow.py
Guides/: shortcuts.txt
Interpreter/: interpreter.py  lexer.py  parser.py
Networking/: __init__.py  sendfile.py
